# robot

./: .env.example  .gitignore  METADATA.json  PLAN.md  README.md  USAGE.md  fizzbuzz.py  pyproject.toml  requirements.txt  run_server.py
robot/: __init__.py  __main__.py  base.py  cli.py  config.py  interactive.py  prompt_loader.py  registry.py  response.py  server.py  status.py  superagent.py
robot/agents/: __init__.py  aider.py  claude.py  codex.py  gemini.py  openrouter.py  vibe.py  zai.py
robot/prompts/: default.yaml
robot/prompts/tasks/: explain.yaml  readme.yaml  review.yaml  superagent.yaml
robot/routes/: __init__.py  browser.py
robot/static/: app.js  index.html  styles.css
tests/: test_agents.py  test_server.py
